--- a/css/index-style.css
+++ b/css/index-style.css
@@ -1,6 +1,24 @@
+* {
+    margin: 0;
+}
+#particles-js {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 50%;
+}
 body {
     display: flex;
     flex-wrap: wrap;
+    font-family: "Prompt", sans-serif;
+    min-height: 100vh;
+    flex-direction: column;
+    background-image: url("../resources/images/background.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+
 }
 
 .header, .text, .footer {
@@ -8,30 +26,32 @@ body {
     color: white;
 }
 .header {
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(10px);
     height: 60px;
-    background-color: blue;
-    font-size: 20px;
-    padding: 10px;
 
     flex-basis: 100%;
 }
 .text {
-    background-color: royalblue;
-    font-size: 20px;
-    padding: 10px;
+    flex: 1;
+    /* background-color: royalblue; */
 
     flex-basis: 100%;
 }
 .footer {
+    bottom: 0;
+    text-align: center;
     background-color: cadetblue;
-    font-size: 20px;
-    padding: 10px;
-
     flex-basis: 100%;
+
+    flex-shrink: 0;
 }
 
 @media screen and (max-width: 600px) {
-    .header, .text, .footer {
-        flex-basis: 100%;
+    .header,
+    .text,
+    .footer {
+    flex-basis: 100%;
     }
 }
