--- a/css/index-style.css
+++ b/css/index-style.css
@@ -22,7 +22,7 @@ body {
     background-size: cover;
 }
 
-.header, .text, .footer {
+.header, .text, .welcome, .footer, .navbar{
     z-index: 1;
     padding: 20px;
     color: white;
@@ -33,6 +33,7 @@ body {
     text-align: center;
     background-color: rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(5px);
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.5);
 
     flex-basis: 100%;
 }
@@ -52,6 +53,8 @@ body {
     background-color: rgba(0, 0, 0, 0.5);
     flex-shrink: 0;
     font-size: 15px;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.5);
+
 }
 
 @media screen and (max-width: 600px) {
@@ -60,4 +63,26 @@ body {
     .footer {
     flex-basis: 100%;
     }
+}
+
+.navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 5rem;
+    background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(5px);
+    z-index: 1;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.5);
+}
+
+.navbar-menu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex-basis: 100%;
+    height: 100%;
+    list-style: none;
+    flex-shrink: 10;
 }
