--- a/css/index-style.css
+++ b/css/index-style.css
@@ -15,7 +15,7 @@ body {
     flex-wrap: wrap;
     font-family: 'Ubuntu', sans-serif;
     font-weight: 300;
-    min-height: 200vh;
+    min-height: 100vh;
     flex-direction: column;
     background-image: url("../resources/images/background.png");
     background-repeat: no-repeat;
@@ -51,6 +51,7 @@ body {
     text-align: center;
     flex-basis: 100%;
     background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(5px);
     flex-shrink: 0;
     font-size: 15px;
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.5);
