--- a/css/accueil-style.css
+++ b/css/accueil-style.css
@@ -1,14 +1,12 @@
 * {
     margin: 0;
 }
+
 #particles-js {
     z-index: 0;
     position: absolute;
     width: 100%;
     height: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 50% 50%;
 }
 body {
     display: flex;
@@ -31,9 +29,9 @@ body {
 }
 .header {
     text-align: center;
-    background-color: rgba(0, 0, 0, 0.5);
-    backdrop-filter: blur(5px);
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(10px);
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.25);
 
     flex-basis: 100%;
 }
@@ -43,18 +41,20 @@ body {
 }
 .welcome {
     font-size: 25px;
-    margin: 300px;
+    /*margin: 300px;*/
+    margin-top: 10%;
+    width: 60%;
 }
 .footer {
-    padding: 10px;
-    bottom: 0;
+    /*padding: 10px;*/
+    /*bottom: 0;*/
     text-align: center;
-    flex-basis: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    backdrop-filter: blur(5px);
-    flex-shrink: 0;
+    /*flex-basis: 100%;*/
+    background-color: rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(10px);
+    /*flex-shrink: 0;*/
     font-size: 15px;
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0.1rem 2rem rgba(0, 0, 0, 0.5);
 
 }
 
@@ -67,23 +67,23 @@ body {
 }
 
 .navbar {
-    position: fixed;
+    /*position: fixed;
     top: 0;
     left: 0;
     width: 5rem;
     background-color: rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(5px);
     z-index: 1;
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.5);*/
 }
 
 .navbar-menu {
-    display: flex;
+    dis/*play: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     flex-basis: 100%;
     height: 100%;
     list-style: none;
-    flex-shrink: 10;
+    flex-shrink: 10;*/
 }
