--- a/css/accueil-style.css
+++ b/css/accueil-style.css
@@ -41,8 +41,8 @@ body {
 }
 .welcome {
     font-size: 25px;
-    /*margin: 300px;*/
-    margin-top: 10%;
+    margin: auto;
+    margin-top: auto;
     width: 60%;
 }
 .footer {
@@ -67,23 +67,35 @@ body {
 }
 
 .navbar {
-    /*position: fixed;
+    position: fixed;
     top: 0;
+    bottom: 0;
     left: 0;
-    width: 5rem;
-    background-color: rgba(0, 0, 0, 0.5);
-    backdrop-filter: blur(5px);
-    z-index: 1;
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.5);*/
+    width: 10rem;
+    background-color: rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(10px);
+    z-index: 2;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.5);
 }
 
 .navbar-menu {
-    dis/*play: flex;
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    flex-basis: 100%;
     height: 100%;
     list-style: none;
-    flex-shrink: 10;*/
+    flex-shrink: 10;
+    color: white;
+    width: 50%;
+}
+
+.navbar-item {
+    list-style: none;
+    color: white;
+}
+
+a {
+    color: white;
+    
 }
