--- a/css/style_index.css
+++ b/css/style_index.css
@@ -91,3 +91,18 @@ a:hover span:nth-child(4)
 	transition: 1s;
 	transition-delay: 0.75s;
 }
+
+.transition {
+position: fixed;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  bottom: 0;
+  z-index: 101;
+  background-color: rgb(37, 50, 59);
+  transition: 0.5s ease-out;
+}
+  
+.transition.is-active {
+	left: 0px;
+}
