--- a/css/accueil-style.css
+++ b/css/accueil-style.css
@@ -53,17 +53,14 @@ body {
     width: 60%;
 }
 .logo {
+    padding-left: 8px;
     color: var(--main-color);
     transition: var(--navbar-transition-speed);
 }
 .footer {
-    /*padding: 10px;*/
-    /*bottom: 0;*/
     text-align: center;
-    /*flex-basis: 100%;*/
     background-color: rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(10px);
-    /*flex-shrink: 0;*/
     font-size: 15px;
     box-shadow: 0 0.1rem 2rem rgba(0, 0, 0, 0.5);
 
@@ -105,7 +102,7 @@ body {
     color: var(--main-color);
     text-decoration: none;
     padding: 0;
-    height: 5rem;
+    height: 2.5rem;
     width: 100%;
     transition: 0.25s;
 }
@@ -122,20 +119,17 @@ body {
     align-items: center;
     width: 100%;
     min-width: 2rem;
-    padding: 1rem 0;
-    padding-top: 2rem;
+    padding-bottom: 2.5rem;
     font-size: 1.5rem;
 }
 .navbar-item:last-child{
+    padding-bottom: 0;
     margin-top: auto;
 }
 .navbar-title {
-    font-size: 2.8rem;
-    margin-left: 2.5rem;
-    font-weight: bold;
-    text-align: justify;
+    font-size: 2.5rem;
+    top: 10px;
     margin-left: -200px;
-    display: inline;
     position: absolute;
     transition: var(--navbar-transition-speed);
 }
@@ -149,7 +143,7 @@ body {
     transform: translateX(12rem) rotate(-180deg) ;   
 }
 .navbar:hover .navbar-title {
-    transform: translateX(225px);
+    transform: translateX(250px);
 }
 
 
