--- a/css/style_doc.css
+++ b/css/style_doc.css
@@ -86,29 +86,29 @@ body
 .container .box:nth-child(4):before,
 .container .box:nth-child(4):after
 {
-	background: linear-gradient(315deg, #03a9f4, #ff0058);
+	background: linear-gradient(315deg, #BC5698, #9A8C4B);
 }
 .container .box:nth-child(5):before,
 .container .box:nth-child(5):after
 {
-	background: linear-gradient(315deg, #4dff03, #00d0ff);
+	background: linear-gradient(315deg, #04A06D, #3D0FCE);
 }
 .container .box:nth-child(6):before,
 .container .box:nth-child(6):after
 {
-	background: linear-gradient(315deg, #4dff03, #00d0ff);
+	background: linear-gradient(315deg, #A00421, #0FC3D4);
 }
 
 .container .box:nth-child(7):before,
 .container .box:nth-child(7):after
 {
-	background: linear-gradient(315deg, #4dff03, #00d0ff);
+	background: linear-gradient(315deg, #A16EE7, #B4CF34);
 }
 
 .container .box:nth-child(8):before,
 .container .box:nth-child(8):after
 {
-	background: linear-gradient(315deg, #4dff03, #00d0ff);
+	background: linear-gradient(315deg, #80C881, #8080C8);
 }
 
 .container .box span
