--- a/css/style_credits.css
+++ b/css/style_credits.css
@@ -3,27 +3,44 @@
 }
 :root {
     --main-color: rgb(214, 214, 214);
-    --secondary-color: rgb(131, 199, 255);
+    --secondary-color: rgb(178, 134, 196);
     --navbar-transition-speed: 0.5s;
     --background-color: rgba(0, 0, 0, 0.1);
 }
 body {
     color: var(--main-color);;
     font-family: 'consolas';
-    background-image: url("../resources/images/background.png");
+    background-image: url("../resources/images/credits-background.png");
     background-repeat: no-repeat;
     background-size: cover;
     flex-direction: column;
     display: flex;
     flex-wrap: wrap;
-    min-height:100vh
+    min-height:100vh;
+    justify-content: center;
+    align-items: center;
 }
 /* 
-## Content ## 
+## Container ## 
 */
-.content {
+.container {
     flex: 1;
     z-index: -1;
+    flex-wrap: wrap;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    max-width: 1200px;
+
+}
+.container .card {
+    position: relative;
+    width: 280;
+    height: 400;
+    margin: 30px;
+    box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
+    background: rgba(255, 255, 255, 0.1);
 }
 
 /* 
@@ -34,9 +51,10 @@ body {
     text-align: center;
     background-color: rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(10px);
-    font-size: 1.5rem;
+	font-size: 1.5rem;
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.25);
     flex-basis: 100%;
+	width:100%
 }
 .footer {
     padding: 20px;
@@ -46,11 +64,13 @@ body {
     font-size: 15px;
     box-shadow: 0 0.1rem 2rem rgba(0, 0, 0, 0.5);
     flex-basis: 100%;
+	width:100%
 }
 /*
 ## NavBar ##
 */
 .navbar {
+    left: 0;
     z-index: 1;
     padding: 20px;
     white-space: nowrap;
