--- a/css/style_credits.css
+++ b/css/style_credits.css
@@ -24,8 +24,8 @@ body {
 ## Container ## 
 */
 .container {
+    margin-top: 5rem;
     flex: 1;
-    z-index: -1;
     flex-wrap: wrap;
     position: relative;
     justify-content: center;
@@ -35,18 +35,55 @@ body {
 }
 .container .card {
     position: relative;
-    width: 280;
-    height: 400;
+    width: 280px;
+    height: 400px;
     margin: 30px;
     box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
     border-radius: 15px;
     background: rgba(255, 255, 255, 0.1);
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
+    border-left: 1px solid rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(5px);
 }
 
+.container .card .content {
+    padding: 20px;
+    text-align: center;
+}
+.container .card .content h3{
+    font-size: 2rem;
+    color: var(--main-color);
+    z-index: 1;
+    padding-bottom: 10px;
+}
+
+.container .card .content p{
+    font-size: 1.5rem;
+    color: var(--main-color);
+    font-weight: 150;
+    z-index: 1;
+}
+.container .card .content a{
+    position: relative;
+    display: inline-block;
+    padding: 8px 20px;
+    margin-top: 15px;
+    background: white;
+    color:black;
+    border-radius: 20px;
+    text-decoration: none;
+    font-weight: 500;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+}
 /* 
 ## Header and footer ##
  */
  .header {
+    position: fixed;
     padding: 20px;
     text-align: center;
     background-color: rgba(0, 0, 0, 0.1);
@@ -54,9 +91,12 @@ body {
 	font-size: 1.5rem;
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.25);
     flex-basis: 100%;
+    top: 0;
 	width:100%
 }
 .footer {
+    position: fixed;
+    margin-right: 0;
     padding: 20px;
     text-align: center;
     background-color: rgba(0, 0, 0, 0.1);
@@ -64,6 +104,7 @@ body {
     font-size: 15px;
     box-shadow: 0 0.1rem 2rem rgba(0, 0, 0, 0.5);
     flex-basis: 100%;
+    bottom: 0;
 	width:100%
 }
 /*
