--- a/css/style_credits.css
+++ b/css/style_credits.css
@@ -72,10 +72,14 @@ body {
     color: var(--main-color);
     font-weight: 100;
 }
-.container .card .content a{
+.container .card .content button {
+    font-family: consolas;
+    font-weight: bold;
+    font-size: 18px;
+    border: none;
     position: relative;
     display: inline-block;
-    padding: 8px 20px;
+    padding: 10px 30px;
     margin-top: 15px;
     background: #fff;
     color: #000;
@@ -85,7 +89,7 @@ body {
     box-shadow: rgba(0, 0, 0, 0.2);
     transition: 0.5s;
 }
-.container .card .content a:hover{
+.container .card .content button:hover {
     background: rgba(255, 255, 255, 0.5);
 }
 /* 
