--- a/css/style_credits.css
+++ b/css/style_credits.css
@@ -8,6 +8,7 @@
     --background-color: rgba(0, 0, 0, 0.1);
 }
 body {
+    
     color: var(--main-color);;
     font-family: 'consolas';
     background-image: url("../resources/images/credits-background.png");
@@ -20,9 +21,7 @@ body {
     justify-content: center;
     align-items: center;
 }
-/* audio {
-    display: none;
-} */
+
 /* 
 ## Container ## 
 */
@@ -44,20 +43,23 @@ body {
     box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
     border-radius: 15px;
     background: rgba(255, 255, 255, 0.1);
-    overflow: hidden;
+    /* overflow: hidden; */
     display: flex;
     justify-content: center;
     align-items: center;
     border-top: 1px solid rgba(255, 255, 255, 0.5);
     border-left: 1px solid rgba(255, 255, 255, 0.5);
-    backdrop-filter: blur(5px);
+    /* backdrop-filter: blur(5px); */
     transform-style: preserve-3d;
 }
-
+.container .card:hover .content {
+    transform: translateZ(30px);
+}
 .container .card .content {
     padding: 20px;
     text-align: center;
     transition: 0.5s;
+    
 }
 .container .card .content h3{
     font-size: 2rem;
@@ -71,6 +73,8 @@ body {
     font-size: 1.5rem;
     color: var(--main-color);
     font-weight: 100;
+    display: block;
+
 }
 .container .card .content button {
     font-family: consolas;
