--- a/css/style_doc.css
+++ b/css/style_doc.css
@@ -88,7 +88,7 @@ body
 .container .box:nth-child(2):before,
 .container .box:nth-child(2):after
 {
-	background: linear-gradient(315deg, #03a9f4, #ff0058);
+	background: linear-gradient(315deg, #4000ff, #ff0000);
 }
 .container .box:nth-child(3):before,
 .container .box:nth-child(3):after
@@ -98,29 +98,29 @@ body
 .container .box:nth-child(4):before,
 .container .box:nth-child(4):after
 {
-	background: linear-gradient(315deg, #BC5698, #9A8C4B);
+	background: linear-gradient(315deg, #ff00e8, #00ffb8);
 }
 .container .box:nth-child(5):before,
 .container .box:nth-child(5):after
 {
-	background: linear-gradient(315deg, #04A06D, #3D0FCE);
+	background: linear-gradient(315deg, #e20202 , #ff00f9 );
 }
 .container .box:nth-child(6):before,
 .container .box:nth-child(6):after
 {
-	background: linear-gradient(315deg, #A00421, #0FC3D4);
+	background: linear-gradient(315deg, #ffaf00, #ff00c2);
 }
 
 .container .box:nth-child(7):before,
 .container .box:nth-child(7):after
 {
-	background: linear-gradient(315deg, #A16EE7, #B4CF34);
+	background: linear-gradient(315deg, #00ffef, #c900ff);
 }
 
 .container .box:nth-child(8):before,
 .container .box:nth-child(8):after
 {
-	background: linear-gradient(315deg, #80C881, #8080C8);
+	background: linear-gradient(315deg, #ff00f9 , #e20202 );
 }
 
 .container .box span
@@ -133,6 +133,7 @@ body
 	bottom: 0;
 	z-index: 50;
 	pointer-events: none;
+	
 }
 
 .container .box span::before
@@ -188,6 +189,7 @@ body
 	width: 100px;
 	height: 100px;
 	opacity: 1;
+
 }
 
 
