--- a/css/style_doc.css
+++ b/css/style_doc.css
@@ -80,6 +80,10 @@ body
 	left: 20px;
 	width: calc(100% - 90px);
 }
+
+/* 
+COLOR BACKGROUND
+*/
 .container .box:nth-child(1):before,
 .container .box:nth-child(1):after
 {
