--- a/css/phis_style.css
+++ b/css/phis_style.css
@@ -92,6 +92,69 @@ body {
 .container .card .content button:hover {
     background: rgba(255, 255, 255, 0.5);
 }
+
+titre1
+{
+    position: absolute;
+    top: 0;
+    padding-top: 10px;
+    margin-top: 7.5rem;
+    width: 300px;
+    height: 40px;
+    box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
+    background: rgba(255, 255, 255, 0.1);
+    overflow: hidden;
+    display: block;
+    justify-content: center;
+    align-items: center;
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
+    border-left: 1px solid rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(5px);
+    transform-style: preserve-3d;
+}
+/*
+.texte1
+{
+    position: relative;
+    width: 1250px;
+    height: 2000px;
+    margin: 30px;
+    box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
+    background: rgba(255, 255, 255, 0.1);
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
+    border-left: 1px solid rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(5px);
+    transform-style: preserve-3d;
+    z-index: -1;
+}
+
+.titre1-2
+{
+    position: absolute;
+    padding-top: 10px;
+    margin-right: 40rem;
+    margin-top: 21rem;
+    width: 615px;
+    height: 50px;
+    box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
+    background: rgba(255, 255, 255, 0.1);
+    overflow: hidden;
+    display: block;
+    justify-content: center;
+    align-items: center;
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
+    border-left: 1px solid rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(5px);
+    transform-style: preserve-3d;
+}*/
+
 /* 
 ## Header and footer ##
  */
@@ -242,65 +305,3 @@ body {
     width:100%
 }
 */
-
-.titre1
-{
-    position: absolute;
-    top: 0;
-    padding-top: 10px;
-    margin-top: 7.5rem;
-    width: 300px;
-    height: 40px;
-    box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
-    border-radius: 15px;
-    background: rgba(255, 255, 255, 0.1);
-    overflow: hidden;
-    display: block;
-    justify-content: center;
-    align-items: center;
-    border-top: 1px solid rgba(255, 255, 255, 0.5);
-    border-left: 1px solid rgba(255, 255, 255, 0.5);
-    backdrop-filter: blur(5px);
-    transform-style: preserve-3d;
-}
-
-.texte1
-{
-    position: relative;
-    width: 1250px;
-    height: 2000px;
-    margin: 30px;
-    box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
-    border-radius: 15px;
-    background: rgba(255, 255, 255, 0.1);
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-top: 1px solid rgba(255, 255, 255, 0.5);
-    border-left: 1px solid rgba(255, 255, 255, 0.5);
-    backdrop-filter: blur(5px);
-    transform-style: preserve-3d;
-    z-index: -1;
-}
-
-.titre1-2
-{
-    position: absolute;
-    padding-top: 10px;
-    margin-right: 40rem;
-    margin-top: 21rem;
-    width: 615px;
-    height: 50px;
-    box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
-    border-radius: 15px;
-    background: rgba(255, 255, 255, 0.1);
-    overflow: hidden;
-    display: block;
-    justify-content: center;
-    align-items: center;
-    border-top: 1px solid rgba(255, 255, 255, 0.5);
-    border-left: 1px solid rgba(255, 255, 255, 0.5);
-    backdrop-filter: blur(5px);
-    transform-style: preserve-3d;
-}
