--- a/css/style_accueil.css
+++ b/css/style_accueil.css
@@ -4,7 +4,10 @@
     --navbar-transition-speed: 0.5s;
     --background-color: rgba(0, 0, 0, 0.1);
 }
-
+@font-face {
+    font-family: 'consolas';
+    src: url("../resources/fonts/consolas.ttf") format("truetype");
+}
 * {
     margin: 0;
 }
