--- a/css/style_credits.css
+++ b/css/style_credits.css
@@ -114,7 +114,7 @@ body {
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.25);
     flex-basis: 100%;
     top: 0;
-	width:100%
+	width:100%;
 }
 .footer {
     position: fixed;
@@ -127,7 +127,7 @@ body {
     box-shadow: 0 0.1rem 2rem rgba(0, 0, 0, 0.5);
     flex-basis: 100%;
     bottom: 0;
-	width:100%
+	width:100%;
 }
 /*
 ## NavBar ##
