--- a/css/style_doc.css
+++ b/css/style_doc.css
@@ -273,7 +273,7 @@ COLOR BACKGROUND
 	font-size: 1.5rem;
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.25);
     flex-basis: 100%;
-	width:100%
+	width:100%;
 }
 .footer {
     padding: 20px;
@@ -283,7 +283,7 @@ COLOR BACKGROUND
     font-size: 15px;
     box-shadow: 0 0.1rem 2rem rgba(0, 0, 0, 0.5);
     flex-basis: 100%;
-	width:100%
+	width:100%;
 }
 /*
 ## NavBar ##
