--- a/css/documentations.css
+++ b/css/documentations.css
@@ -170,7 +170,7 @@ body {
     transition: var(--navbar-transition-speed);
 }
 .navbar-item:hover .navbar-icon{
-    color: var(--secondary-color);
+    opacity: 0.5;
 }
 .navbar:not(:hover) .navbar-link {
     color: rgba(0, 0, 0, 0)
