--- a/css/phis_style.css
+++ b/css/phis_style.css
@@ -20,9 +20,7 @@ body {
     justify-content: center;
     align-items: center;
 }
-/* audio {
-    display: none;
-} */
+
 /* 
 ## Container ## 
 */
@@ -93,12 +91,14 @@ body {
     background: rgba(255, 255, 255, 0.5);
 }
 
-titre1
+.titre1
 {
-    position: absolute;
+    position: relative;
     top: 0;
-    padding-top: 10px;
-    margin-top: 7.5rem;
+    padding: 10px 15px;
+
+    margin-top: 2rem;
+    margin-bottom: 2rem;
     width: 300px;
     height: 40px;
     box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
@@ -114,34 +114,48 @@ titre1
     transform-style: preserve-3d;
 }
 
-/*.texte1
-{
+.container {
+    flex: 1;
+    z-index: -1;
     position: relative;
-    width: 1250px;
-    height: 2000px;
+
+    width: 60%;
+    height: 100%;
     margin: 30px;
+
     box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
     border-radius: 15px;
     background: rgba(255, 255, 255, 0.1);
     overflow: hidden;
     display: flex;
-    justify-content: center;
     align-items: center;
+    backdrop-filter: blur(10px);
     border-top: 1px solid rgba(255, 255, 255, 0.5);
     border-left: 1px solid rgba(255, 255, 255, 0.5);
-    backdrop-filter: blur(5px);
-    transform-style: preserve-3d;
+
     z-index: -1;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+}
+
+.texte1
+{
+    position: relative;
 }
 
 .titre1-2
 {
-    position: absolute;
-    padding-top: 10px;
-    margin-right: 40rem;
-    margin-top: 21rem;
+    position: relative;
+    padding: 10px 10px;
+    padding-top: 15px;
+    padding-bottom: 0;
+    margin-left: -30rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+
     width: 615px;
     height: 50px;
+
     box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
     border-radius: 15px;
     background: rgba(255, 255, 255, 0.1);
@@ -153,7 +167,7 @@ titre1
     border-left: 1px solid rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(5px);
     transform-style: preserve-3d;
-}*/
+}
 
 /* 
 ## Header and footer ##
@@ -256,8 +270,7 @@ titre1
     transition: var(--navbar-transition-speed);
 }
 .navbar-item:hover .navbar-icon{
-    opacity: 1;
-    /* color: var(--secondary-color); */
+    opacity: 0.5;
 }
 .navbar:not(:hover) .navbar-link {
     /* display: none; */
