--- a/css/phis_style.css
+++ b/css/phis_style.css
@@ -141,6 +141,7 @@ body {
 .texte1
 {
     position: relative;
+    margin: 35px;
 }
 
 .titre1-2
@@ -151,7 +152,7 @@ body {
     padding-bottom: 0;
     margin-left: -30rem;
     margin-top: 2rem;
-    margin-bottom: 2rem;
+    /*margin-bottom: 0.1rem;*/
 
     width: 615px;
     height: 50px;
