--- a/css/phis_style.css
+++ b/css/phis_style.css
@@ -3,7 +3,7 @@
 }
 :root {
     --main-color: rgb(214, 214, 214);
-    --secondary-color: rgb(178, 134, 196);
+    --secondary-color: rgb(0, 183, 255);
     --navbar-transition-speed: 0.5s;
     --background-color: rgba(0, 0, 0, 0.1);
 }
@@ -24,79 +24,17 @@ body {
 /* 
 ## Container ## 
 */
-.container {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    max-width: 1200px;
-    flex-wrap: wrap;
-    z-index: 1;
-
+.texte1 c {
+    color: var(--secondary-color);
 }
-.container .card {
-    position: relative;
-    width: 280px;
-    height: 400px;
-    margin: 30px;
-    box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
-    border-radius: 15px;
-    background: rgba(255, 255, 255, 0.1);
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-top: 1px solid rgba(255, 255, 255, 0.5);
-    border-left: 1px solid rgba(255, 255, 255, 0.5);
-    backdrop-filter: blur(5px);
-    transform-style: preserve-3d;
-}
-
-.container .card .content {
-    padding: 20px;
-    text-align: center;
-    transition: 0.5s;
-}
-.container .card .content h3{
-    font-size: 2rem;
-    color: var(--main-color);
-    z-index: 1;
-    padding-bottom: 10px;
-    text-decoration:underline;
-}
-
-.container .card .content p{
-    font-size: 1.5rem;
-    color: var(--main-color);
-    font-weight: 100;
-}
-.container .card .content button {
-    font-family: consolas;
-    font-weight: bold;
-    font-size: 18px;
-    border: none;
-    position: relative;
-    display: inline-block;
-    padding: 10px 30px;
-    margin-top: 15px;
-    background: #fff;
-    color: #000;
-    border-radius: 20px;
-    text-decoration: none;
-    font-weight: 500;
-    box-shadow: rgba(0, 0, 0, 0.2);
-    transition: 0.5s;
-}
-.container .card .content button:hover {
-    background: rgba(255, 255, 255, 0.5);
-}
-
 .titre1
 {
     position: relative;
     top: 0;
     padding: 10px 15px;
 
+    margin-right: auto;
+    margin-left: auto;
     margin-top: 2rem;
     margin-bottom: 2rem;
     width: 300px;
@@ -112,6 +50,7 @@ body {
     border-left: 1px solid rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(5px);
     transform-style: preserve-3d;
+
 }
 
 .container {
@@ -128,6 +67,7 @@ body {
     background: rgba(255, 255, 255, 0.1);
     overflow: hidden;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     backdrop-filter: blur(10px);
     border-top: 1px solid rgba(255, 255, 255, 0.5);
@@ -136,12 +76,17 @@ body {
     z-index: -1;
     margin-top: 5rem;
     margin-bottom: 5rem;
+
+    text-align: justify;    
+    align-items: center;
 }
 
 .texte1
 {
     position: relative;
     margin: 35px;
+    font-weight: 500;
+    font-size: large;
 }
 
 .titre1-2
@@ -150,8 +95,8 @@ body {
     padding: 10px 10px;
     padding-top: 15px;
     padding-bottom: 0;
-    margin-left: -30rem;
-    margin-top: 2rem;
+    margin-left: 2rem;
+    margin-top: 1rem;
     /*margin-bottom: 0.1rem;*/
 
     width: 615px;
@@ -162,7 +107,6 @@ body {
     background: rgba(255, 255, 255, 0.1);
     overflow: hidden;
     display: block;
-    justify-content: center;
     align-items: center;
     border-top: 1px solid rgba(255, 255, 255, 0.5);
     border-left: 1px solid rgba(255, 255, 255, 0.5);
@@ -304,18 +248,3 @@ body {
 .transition.is-active {
     left: 0px;
 }
-
-
-
-/*.text
-{
-    padding: 20px;
-    text-align: center;
-    background-color: rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(10px);
-    font-size: 1.5rem;
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.25);
-    flex-basis: 100%;
-    width:100%
-}
-*/
