--- a/css/documentations.css
+++ b/css/documentations.css
@@ -27,46 +27,94 @@ body {
 ## Content ## 
 */
 .container {
-    flex: 1;
     z-index: -1;
     position: relative;
+
     width: 60%;
     height: 100%;
     margin: 30px;
+    padding: 30px;
+
     box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
     border-radius: 15px;
     background: rgba(255, 255, 255, 0.1);
     overflow: hidden;
     display: flex;
-    align-items: center;
+    flex-wrap: wrap;
     backdrop-filter: blur(10px);
     border-top: 1px solid rgba(255, 255, 255, 0.5);
     border-left: 1px solid rgba(255, 255, 255, 0.5);
-    margin-top: 5rem;
-    margin-bottom: 5rem;
+
+    z-index: -1;
+    
+    margin-top: 5.5rem;
+    margin-bottom: 5.5rem;
+    text-align: justify;
 }
 .title {
+    justify-content: center;
+    align-items: center;
+    
     position: relative;
-    margin: 30px;
-    padding: 10px 15px;
-    top:0;
+    top: 0;
+    padding: 15px 40px;
+
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+
+    width: auto; 
+    height: auto;
+
     box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
     border-radius: 15px;
     background: rgba(255, 255, 255, 0.1);
     overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    backdrop-filter: blur(10px);
+    display: block;
     border-top: 1px solid rgba(255, 255, 255, 0.5);
     border-left: 1px solid rgba(255, 255, 255, 0.5);
-    font-size: 1rem;
-    font-weight: bold;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: auto;
+    backdrop-filter: blur(5px);
+    
+    text-align: center;
+    font-size: 30px;
+    font-weight: 600;
+    text-decoration: underline;
 }
 
+.text
+{
+    position: relative;
+    margin-left: 50px;
+    margin-right: 50px;
+    font-weight: 100;
+    font-size: large;
+}
+
+.subtitle
+{
+    position: relative;
+    padding: 20px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+
+    margin-left: 2rem;
+    margin-top: 3rem;
+    margin-bottom: 1rem;
+
+    max-height: 30px;
+    box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
+    background: rgba(255, 255, 255, 0.1);
+    overflow: hidden;
+    display: block;
+    align-items: center;
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
+    border-left: 1px solid rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(5px);
+
+    font-size: 20px;
+}
 /* 
 ## Header and footer ##
  */
