--- a/css/documentations.css
+++ b/css/documentations.css
@@ -115,6 +115,28 @@ body {
 
     font-size: 20px;
 }
+.box {
+    /* display: flex; */
+    flex-direction: column;
+    position: relative;
+    width: auto;
+    height: auto;
+    margin: 30px;
+    padding-bottom: 10px;
+
+    box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
+    background: rgba(255, 255, 255, 0.1);
+    overflow: hidden;
+    backdrop-filter: blur(10px);
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
+    border-left: 1px solid rgba(255, 255, 255, 0.5);
+    
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    text-align: center;
+    align-items: center;
+}
 /* 
 ## Header and footer ##
  */
