--- a/css/style_accueil.css
+++ b/css/style_accueil.css
@@ -14,10 +14,9 @@
 
 #particles-js {
     z-index: 0;
-    position: absolute;
-    width: 100%;
-    height: 100%;
+    position: fixed;
 }
+
 body {
     display: flex;
     flex-wrap: wrap;
