--- a/css/style_doc.css
+++ b/css/style_doc.css
@@ -391,3 +391,11 @@ position: fixed;
 .transition.is-active {
 	left: 0px;
 }
+
+/*alors, j'avais besoin
+de faire les 
+400 lignes
+alors,
+je
+les 
+fais*/
