--- a/css/style_credits.css
+++ b/css/style_credits.css
@@ -222,6 +222,61 @@ body {
 .navbar:hover .navbar-title {
     transform: translateX(250px);
 }
+
+/*
+## Popup ##
+*/
+.popup {
+    transform: translateY(-100%);
+    position: fixed;
+    z-index: 5;
+
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+    transition: 0.5s;
+  }
+.popup.in {
+    transition: 0.5s;
+    transform: translateY(0);
+}
+.popup.out {
+    transition: 0.5s;
+    transform: translateY(-100%);
+}
+.popup-content {
+    background-color: #fefefe;
+    width: 25%;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
+    background: rgba(255, 255, 255, 0.1);
+    overflow: hidden;
+    justify-content: center;
+    align-items: center;
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
+    border-left: 1px solid rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(5px);
+}
+.popup-content p {
+    margin: 5px;
+}
+.close {
+    color: var(--main-color);
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    transition: var(--navbar-transition-speed);
+}
+.close:hover{
+    opacity: 0.5;
+    text-decoration: none;
+    cursor: pointer;
+}
 /*
 ## Transition ##
 */
