--- a/css/style_accueil.css
+++ b/css/style_accueil.css
@@ -44,12 +44,18 @@ body {
     font-size: 1.5em;
 }
 .header {
+    display: flex;
+    flex-direction: row;
+    flex-basis: 100%;
+
     padding: 20px;
     text-align: center;
+    justify-content: center;
+    align-items: center;
+
     background-color: rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(10px);
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.25);
-    flex-basis: 100%;
 }
 .footer {
     position: fixed;
@@ -64,7 +70,9 @@ body {
     bottom: 0;
 	width:100%;
 }
-
+.header-title {
+    margin: 0 10px;
+}
 .content{
     display: flex;
     flex-direction: row;
