--- a/css/documentations.css
+++ b/css/documentations.css
@@ -23,9 +23,11 @@ body
     background-image: url("../resources/images/background/documentation-background.png");
     background-repeat: no-repeat;
     background-size: cover;
-    flex-direction: column;
+
     display: flex;
     flex-wrap: wrap;
+    flex-direction: column;
+
     min-height:100vh;
     align-items: center;
 }
@@ -37,6 +39,14 @@ body
 /* 
 ## Content ## 
 */
+.side {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 .container 
 {
     z-index: -1;
@@ -51,13 +61,15 @@ body
     border-radius: 15px;
     background: rgba(255, 255, 255, 0.1);
     overflow: hidden;
-    display: flex;
-    flex-wrap: wrap;
     backdrop-filter: blur(10px);
     border-top: 1px solid rgba(255, 255, 255, 0.5);
     border-left: 1px solid rgba(255, 255, 255, 0.5);
 
-    z-index: -1;
+    display: flex;
+    flex-wrap: wrap;
+
+
+    z-index: 0;
     
     margin-top: 7rem;
     margin-bottom: 5.5rem;
@@ -114,15 +126,17 @@ body
     margin-left: 2rem;
     margin-top: 3rem;
     margin-bottom: 1rem;
-    float: right;
+    float: left;
 
     max-height: 30px;
     box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
     border-radius: 15px;
     background: rgba(255, 255, 255, 0.1);
     overflow: hidden;
+
     display: flex;
     align-items: center;
+    
     border-top: 1px solid rgba(255, 255, 255, 0.5);
     border-left: 1px solid rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(5px);
@@ -186,6 +200,7 @@ button:hover
     cursor: pointer;
 }
 a {
+    z-index: 1;
     text-decoration: none;
     color: var(--secondary-color)
 }
