--- a/css/documentations.css
+++ b/css/documentations.css
@@ -36,6 +36,33 @@ body
 
 
 
+/*
+## Summary ##
+*/
+.summary {
+    margin-left: 2rem;
+    box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
+    background: rgba(255, 255, 255, 0.1);
+    overflow: hidden;
+    backdrop-filter: blur(10px);
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
+    border-left: 1px solid rgba(255, 255, 255, 0.5);
+}
+.summary-title {
+    font-size: 2rem;
+    font-weight: 300;
+    margin: 1rem;
+    margin-bottom: 2rem;
+}
+.summary-item {
+    margin-top: -1rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    cursor: pointer;
+    /* color: var(--secondary-color); */
+}
+
 /* 
 ## Content ## 
 */
