--- a/css/style_credits.css
+++ b/css/style_credits.css
@@ -360,7 +360,27 @@ a {
     box-shadow: rgba(0, 0, 0, 0.2);
     transition: 0.5s;
 }
-
+.paypal {
+    font-family: consolas;
+    font-weight: bold;
+    font-size: 16px;
+    border: none;
+    position: relative;
+    padding: 15px 30px;
+    display: flex;
+    margin: 2rem;
+    
+    background: #fff;
+    color: #000;
+    border-radius: 5px;
+    text-decoration: none;
+    box-shadow: rgba(0, 0, 0, 0.2);
+    transition: 0.5s;
+}
+button:hover {
+    background: rgba(255, 255, 255, 0.5);
+    cursor: pointer;
+}
 /*
 ## Transition ##
 */
