--- a/css/style_credits.css
+++ b/css/style_credits.css
@@ -366,16 +366,21 @@ a {
     font-size: 16px;
     border: none;
     position: relative;
-    padding: 15px 30px;
+    padding: 20px 35px;
     display: flex;
     margin: 2rem;
-    
+
     background: #fff;
     color: #000;
     border-radius: 5px;
     text-decoration: none;
     box-shadow: rgba(0, 0, 0, 0.2);
     transition: 0.5s;
+}
+#tidic-popup-content {
+    display: flex;
+    justify-content: center;
+
 }
 button:hover {
     background: rgba(255, 255, 255, 0.5);
